# CsSimConnectInterOp

./: .gitignore  CMakeLists.txt  CsSimConnectInterOp.sln  CsSimConnectInterOp.vcxproj  CsSimConnectInterOp.vcxproj.filters  CsSimConnectInterOpMock.vcxproj  CsSimConnectInterOpMock.vcxproj.filters  CsSimConnectInterOpTests.vcxproj  CsSimConnectInterOpTests.vcxproj.filters  README.md
.github/: copilot-instructions.md
mock/: CsSimConnectInterOpMock.cpp  CsSimConnectInterOpMock.h  framework.h  pch.h
nuget/: PackageReadme.md
nuget/CsSimConnect.Native.Package/: CsSimConnect.Native.Package.csproj
src/: CMakeLists.txt  CsSimConnectInterOp.cpp  CsSimConnectInterOp.h  Log.h  Logger.cpp  pch.h
tests/: TestConnect.cpp  TestLogging.cpp  TestMain.cpp
unittests/: CMakeLists.txt  LogTests.cpp
